# open-memory

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  extensions.py
app/controllers/: task.py  task_controller.py
app/models/: memory.py  task.py
app/routes/: __init__.py  routes.py
app/services/: embedding.py  llm.py  task.py  task_service.py
app/tasks/: background.py  background_tasks.py  memory.py
app/utils/: response.py
docker/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: memory_schema_design.md
migrations/versions/: 07d7c8984643_add_locked_column_to_memory.py  119cd6574994_initial_migration_with_official_.py  68815f4198d3_update_task_model.py  6997adf3f49c_initial_migration_with_memory_table.py  71e2da1cd7da_initial_migration.py  8f1a2c3d4e5f_add_unlocked_memory_compression_index.py
tests/: test_api.py
